[gd_scene load_steps=13 format=3 uid="uid://b575te6nqbh70"]

[ext_resource type="Script" path="res://scripts/menus/popups/enter_room_password_popup.gd" id="1_rsn3x"]
[ext_resource type="PackedScene" uid="uid://jsg3njon7m1i" path="res://scenes/gui/text_button.tscn" id="1_toyko"]
[ext_resource type="Shader" path="res://resources/shaders/text_button.gdshader" id="2_igakw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_askcd"]
bg_color = Color(0.89, 0.854697, 0.7387, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.61, 0.569028, 0.4209, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 15
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_7mb8o"]
font_size = 40
font_color = Color(0.226153, 0.20497, 0.131826, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqtyp"]
bg_color = Color(0.0383972, 0.0383972, 0.0383971, 1)
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.611765, 0.568627, 0.419608, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eos4e"]
resource_local_to_scene = true
shader = ExtResource("2_igakw")
shader_parameter/highlighted = false
shader_parameter/brightness = 0.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ngeuo"]
resource_local_to_scene = true
shader = ExtResource("2_igakw")
shader_parameter/highlighted = false
shader_parameter/brightness = 0.6

[sub_resource type="Animation" id="Animation_ih63l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xc2n4"]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1998),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2r27m"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1998),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aer28"]
_data = {
"RESET": SubResource("Animation_ih63l"),
"fade_in": SubResource("Animation_xc2n4"),
"fade_out": SubResource("Animation_2r27m")
}

[node name="EnterRoomPasswordPopup" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rsn3x")

[node name="PopupPanel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(600, 350)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_askcd")

[node name="TitleLabel" type="Label" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.5
offset_right = 113.5
offset_bottom = 55.0
grow_horizontal = 2
text = "Enter Room password"
label_settings = SubResource("LabelSettings_7mb8o")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PopupPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 4.0
grow_horizontal = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_hqtyp")

[node name="PassTextEdit" type="TextEdit" parent="PopupPanel"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 1
anchors_preset = -1
offset_left = 26.0
offset_top = 144.0
offset_right = 457.0
offset_bottom = 193.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Password"

[node name="JoinButton" parent="PopupPanel" instance=ExtResource("1_toyko")]
material = SubResource("ShaderMaterial_eos4e")
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -253.0
offset_top = -63.0
offset_right = 47.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.7, 0.7)
text = "Join"

[node name="CancelButton" parent="PopupPanel" instance=ExtResource("1_toyko")]
material = SubResource("ShaderMaterial_ngeuo")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 62.0
offset_top = 286.0
offset_right = 362.0
offset_bottom = 356.0
scale = Vector2(0.7, 0.7)
text = "Cancel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aer28")
}

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="button_pressed" from="PopupPanel/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="button_pressed" from="PopupPanel/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
